Add JavaFX GUI support with automated run script and comprehensive documentation